--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,16 +10,17 @@
             "request": "launch",
             "mainClass": "App",
             "projectName": "Proxy-Shopping-Management-System_4dee0f90",
-            "vmArgs": "--module-path \"C:/javafx-sdk-25/lib\" --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path \"C:/Users/yakine/Downloads/openjfx-25.0.1_windows-x64_bin-sdk/javafx-sdk-25.0.1/lib\" --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
             "name": "Run App with JavaFX",
             "request": "launch",
             "mainClass": "App",
-            "vmArgs": "--module-path \"C:/javafx-sdk-25/lib\" --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path \"C:/Users/yakine/Downloads/openjfx-25.0.1_windows-x64_bin-sdk/javafx-sdk-25.0.1/lib\" --add-modules javafx.controls,javafx.fxml",
             "classPaths": [
-                "${workspaceFolder}/bin"
+                "${workspaceFolder}/bin",
+                "C:/Users/yakine/Downloads/postgresql-42.7.8.jar"
             ]
         }
     ]
